Page description added

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Geoscientific Analyst
 email: khaors@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is a space to discuss the use of programming for solving different types of problems in Earth Sciences.
+  My favorite programming languages include Fortran90, Fortran2003, C++, Matlab, R and python.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: khaors
